WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58843
Background radius is wrong for split inline
https://bugs.webkit.org/show_bug.cgi?id=58843
Summary
Background radius is wrong for split inline
Simon Fraser (smfr)
Reported
2011-04-18 15:41:19 PDT
Created
attachment 90105
[details]
Testcase See testcase; the radius on the background for the split inline is wrong.
Attachments
Testcase
(2.09 KB, text/html)
2011-04-18 15:41 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(66.42 KB, patch)
2011-04-18 22:22 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-04-18 22:22:38 PDT
Created
attachment 90145
[details]
Patch
Dave Hyatt
Comment 2
2011-04-19 11:36:39 PDT
Comment on
attachment 90145
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2011-04-19 12:33:44 PDT
http://trac.webkit.org/changeset/84283
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug